2007-06-13  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in: Check for CXSparse with C++.
	* Makeconf.in (do-subst-config-vals): Also substitute ${libdir} as
	OCTAVE_CONF_LIBDIR.
	* mkoctfile.in: Set DEFAULT_LIBDIR and substitute OCTAVE_HOME.
	Define LIBDIR.  Use LIBDIR to set DEFAULT_LFLAGS.

2007-06-12  Benjamin Lindner  <lindnerben@gmx.net>

	* configure.in: For mingw, add -lws2_32 -lkernel32 to LIBS and set
	_USE_MATH_DEFINES same as for msvc.

2007-06-06  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in: Check for utime.h and sys/utime.h headers.
	Check for utime, _chmod, _utime, and _utime32 functions.

2007-06-03  David Bateman  <dbateman@free.fr>

	* configure.in (AC_CONFIG_FILES): Add src/mxarray.h
	* examples/mycell.c, examples/mypow2.c, examples/mysparse.c,
	examples/mystring.c, examples/mystruct.c: Use mwSize and mwIndex,
	rather than int for indexing to conform to new mex API.
	
2007-06-01  John W. Eaton  <jwe@octave.org>

	* configure.in (*-*-darwin*): Fix quoting and construction of
	MKOCTFILE_DL_LDFLAGS.
	* mkoctfile.in (DEFAULT_BINDIR, EXEEXT): New substitutions.
	* Makeconf.in (MKOCTFILE_DL_LDFLAGS): Delete.
	(do-subst-config-vals): Do configure substitution of
	MKOCTFILE_DL_LDFLAGS directly here instead of using intermediate
	variable.  Quote this sed substitution with ' instead of ".

2007-05-29  Steven Mestdagh  <steven.mestdagh@esat.kuleuven.be>

	* configure.in: Delete spurious "break" in fftw3 check.
	Use separate case for SH_LD and SH_LDFLAGS on openbsd.

2007-05-22  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-script-uninstall): Also remove directory.

2007-05-22  Thomas Weber  <thomas.weber.mail@gmail.com>

	* NEWS.2, README.MSVC, WWW/NEWS-2.html: Fix typos.

2007-05-16  David Bateman  <dbateman@free.fr>

	* PROJECTS: Update.

2007-04-27  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (SOURCES): Add all example files to the list.
