@@ -1,6 +1,12 @@
 2007-06-13  Michael Goffioul  <michael.goffioul@swing.be>
 
+	* configure.in: Set NO_OCT_FILE_STRIP=true for msdosmsvc.
+
+	* aclocal.m4 (OCTAVE_HDF5_DLL): Include return statements in
+	function body used for test.
+
 	* configure.in: Check for CXSparse with C++.
+
 	* Makeconf.in (do-subst-config-vals): Also substitute ${libdir} as
 	OCTAVE_CONF_LIBDIR.
 	* mkoctfile.in: Set DEFAULT_LIBDIR and substitute OCTAVE_HOME.
